--- a/Agent profil.html
+++ b/Agent profil.html
@@ -44,13 +44,23 @@
             box-shadow: 10px 0 20px rgba(0,0,0,0.1); padding: 25px;
         }
         #sidebar.open { left: 0; }
+        /* Improved sidebar for very small screens */
+        @media (max-width: 380px) {
+            #sidebar { width: 85%; }
+        }
         .overlay-bg {
             position: fixed; inset: 0; background: rgba(0,0,0,0.4);
             display: none; z-index: 50;
         }
+        /* Table scroll fix for mobile */
+        .table-container {
+            width: 100%;
+            overflow-x: auto;
+            -webkit-overflow-scrolling: touch;
+        }
     </style>
 </head>
-<body class="p-4 md:p-8">
+<body class="p-3 md:p-8">
 
 <div id="loader-overlay">
     <div class="logo-container">
@@ -97,34 +107,34 @@
 
 <div class="max-w-6xl mx-auto">
     <div class="flex justify-between items-center mb-8 border-b-2 border-blue-600 pb-4">
-        <div class="flex items-center gap-4">
+        <div class="flex items-center gap-2 md:gap-4">
             <button onclick="toggleSidebar()" class="text-2xl text-gray-700 hover:text-blue-600 transition">☰</button>
-            <img src="Images/Campus collective logo origin.jpg" alt="Logo" class="w-12 h-12 rounded-full">
-            <h1 class="text-2xl font-bold text-gray-800">Agent Portal</h1>
+            <img src="Images/Campus collective logo origin.jpg" alt="Logo" class="w-10 h-10 md:w-12 md:h-12 rounded-full">
+            <h1 class="text-xl md:text-2xl font-bold text-gray-800">Agent Portal</h1>
         </div>
-        <div class="flex items-center gap-4">
-            <div id="agent-initials" class="w-10 h-10 bg-blue-600 text-white flex items-center justify-center rounded-full font-black text-sm shadow-md">..</div>
-            <button onclick="logout()" class="text-red-600 font-bold hover:underline">Logout</button>
-        </div>
-    </div>
-
-    <div id="stats-summary" class="grid grid-cols-1 md:grid-cols-3 gap-6 mb-8 text-center">
-        <div class="card p-6 border-l-4 border-blue-500">
-            <p class="text-gray-500 font-bold text-xs uppercase">Pending Recruits</p>
-            <h2 id="pending-count" class="text-3xl font-black">0</h2>
-        </div>
-        <div class="card p-6 border-l-4 border-green-500">
-            <p class="text-gray-500 font-bold text-xs uppercase">Approved</p>
-            <h2 id="approved-count" class="text-3xl font-black">0</h2>
-        </div>
-        <div class="card p-6 border-l-4 border-orange-500">
-            <p class="text-gray-500 font-bold text-xs uppercase">Total Commission</p>
-            <h2 id="total-commission" class="text-3xl font-black text-green-600">R 0.00</h2>
+        <div class="flex items-center gap-3 md:gap-4">
+            <div id="agent-initials" class="w-8 h-8 md:w-10 md:h-10 bg-blue-600 text-white flex items-center justify-center rounded-full font-black text-xs md:text-sm shadow-md">..</div>
+            <button onclick="logout()" class="text-red-600 text-sm md:text-base font-bold hover:underline">Logout</button>
         </div>
     </div>
 
-    <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
-        <div class="lg:col-span-1 card p-6 h-fit">
+    <div id="stats-summary" class="grid grid-cols-1 sm:grid-cols-3 gap-4 md:gap-6 mb-8 text-center">
+        <div class="card p-4 md:p-6 border-l-4 border-blue-500">
+            <p class="text-gray-500 font-bold text-[10px] md:text-xs uppercase">Pending Recruits</p>
+            <h2 id="pending-count" class="text-2xl md:text-3xl font-black">0</h2>
+        </div>
+        <div class="card p-4 md:p-6 border-l-4 border-green-500">
+            <p class="text-gray-500 font-bold text-[10px] md:text-xs uppercase">Approved</p>
+            <h2 id="approved-count" class="text-2xl md:text-3xl font-black">0</h2>
+        </div>
+        <div class="card p-4 md:p-6 border-l-4 border-orange-500">
+            <p class="text-gray-500 font-bold text-[10px] md:text-xs uppercase">Total Commission</p>
+            <h2 id="total-commission" class="text-2xl md:text-3xl font-black text-green-600">R 0.00</h2>
+        </div>
+    </div>
+
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6 md:gap-8">
+        <div class="lg:col-span-1 card p-5 md:p-6 h-fit">
             <h3 class="text-lg font-bold text-gray-800 mb-4 border-b pb-2">Submit New Student</h3>
             <form id="studentForm" class="space-y-4">
                 <input type="text" name="studentName" placeholder="First Name" required class="w-full p-2 border rounded">
@@ -151,26 +161,28 @@
             </form>
         </div>
 
-        <div class="lg:col-span-2 card p-6 overflow-x-auto">
-            <div class="flex justify-between items-center mb-4 border-b pb-2">
+        <div class="lg:col-span-2 card p-5 md:p-6">
+            <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center mb-4 border-b pb-2 gap-2">
                 <h3 class="text-lg font-bold text-gray-800">Recent Submissions</h3>
-                <button onclick="downloadPDF()" class="bg-red-600 text-white text-xs px-3 py-2 rounded-lg font-bold hover:bg-red-700 transition shadow">
+                <button onclick="downloadPDF()" class="bg-red-600 text-white text-[10px] md:text-xs px-3 py-2 rounded-lg font-bold hover:bg-red-700 transition shadow">
                     Download List PDF
                 </button>
             </div>
 
-            <table class="w-full text-left">
-                <thead>
-                    <tr class="text-gray-400 text-xs uppercase border-b">
-                        <th class="pb-3">Student</th>
-                        <th class="pb-3">Accommodation</th>
-                        <th class="pb-3">Move-in</th>
-                        <th class="pb-3">Status</th>
-                        <th class="pb-3">Commission</th>
-                    </tr>
-                </thead>
-                <tbody id="submissions-table" class="text-sm"></tbody>
-            </table>
+            <div class="table-container">
+                <table class="w-full text-left min-w-[600px]">
+                    <thead>
+                        <tr class="text-gray-400 text-xs uppercase border-b">
+                            <th class="pb-3">Student</th>
+                            <th class="pb-3">Accommodation</th>
+                            <th class="pb-3">Move-in</th>
+                            <th class="pb-3">Status</th>
+                            <th class="pb-3">Commission</th>
+                        </tr>
+                    </thead>
+                    <tbody id="submissions-table" class="text-sm"></tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
@@ -402,4 +414,6 @@
     };
 </script>
 </body>
-</html>
+</html>                alert("Error: " + err.message);
+            hideLoader();
+    
