--- a/management.html
+++ b/management.html
@@ -66,8 +66,8 @@
             <h1 class="text-2xl font-black text-gray-800 uppercase tracking-tight">Management Command Center</h1>
         </div>
         <div class="flex gap-4">
-            <button onclick="triggerLoader('Syncing Data...', 1200).then(()=>location.reload())" class="bg-gray-100 text-gray-700 px-4 py-2 rounded-lg font-bold border hover:bg-gray-200 transition">売 Refresh</button>
-            <button onclick="openCalculator()" class="bg-blue-100 text-blue-700 px-4 py-2 rounded-lg font-bold border border-blue-300 hover:bg-blue-200 transition">ｧｮ Commission Calcs</button>
+            <button onclick="triggerLoader('Syncing Data...', 1200).then(()=>location.reload())" class="bg-gray-100 text-gray-700 px-4 py-2 rounded-lg font-bold border hover:bg-gray-200 transition">🔄 Refresh</button>
+            <button onclick="openCalculator()" class="bg-blue-100 text-blue-700 px-4 py-2 rounded-lg font-bold border border-blue-300 hover:bg-blue-200 transition">➕ Commission Calcs</button>
             <button onclick="logout()" class="bg-red-600 text-white px-6 py-2 rounded-lg font-bold hover:bg-red-700 transition">Secure Logout</button>
         </div>
     </div>
@@ -93,7 +93,7 @@
 
     <div class="mb-4 flex justify-between">
         <input type="text" id="globalSearch" onkeyup="handleGlobalSearch()" placeholder="Search..." class="w-1/3 p-2 border-2 border-blue-100 rounded-lg outline-none text-sm shadow-sm">
-        <button onclick="printAllRecruitsPDF()" class="bg-green-600 text-white px-4 py-2 rounded-lg font-bold text-sm hover:bg-green-700 transition">塘 Print Master Recruit List</button>
+        <button onclick="printAllRecruitsPDF()" class="bg-green-600 text-white px-4 py-2 rounded-lg font-bold text-sm hover:bg-green-700 transition">📃 Print Master Recruit List</button>
     </div>
 
     <div class="flex justify-between items-center mb-6 border-b border-gray-200">
